# gemseo

./: .coveragerc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .justfile  .markdownlint.yml  .mypy.ini  .pip-tools.toml  .pre-commit-config.yaml  .pylintrc  .pytest.ini  .readthedocs.yaml  .renovaterc.json  .ruff.toml  .rumdl.toml  .texlipse  CHANGELOG.md  CHANGELOG.rst  CREDITS.rst  MANIFEST.in  README.md  README.rst  bump-version.yml  environment-py2.yml  environment-py3.yml  mkdocs-fast.yml  mkdocs.yml  mkdocs_fast.yml  pyproject.toml  setup.cfg  setup.py  towncrier.toml  tox.ini
.gitlab/issue_templates/: Bug.md  Documentation.md  Feature Proposal.md  Refactoring.md
LICENSES/headers/: BSD-0-Clause.txt  CC-BY-SA-4.0.txt  LGPL-3.0.txt
benchmarks/: base_benchmark.py  base_benchmarkee.py  compare_dict_of_arrays.py  coupling_structure.py  data_factory.py  grammar_creation.py  grammar_preparation.py  grammar_validation.py  hash_data.py  json_grammar.py  mda_creation.py  perf_coupling_structure.py  perf_discipline.py  perf_resampling.py  resampling.py  run-compare-data-benchmarks.zsh  run-grammar-benchmarks.zsh  run-hash-data-benchmarks.zsh
changelog/: template.jinja2
changelog/fragments/: 1000.add.rst  1000.changed.rst  1002.fixed.rst  1003.added.rst  1005.added.rst  1006.fixed.rst  1008.added.rst  1010.added.rst  1011.added.rst  1012.added.rst  1016.added.rst  1017.changed.rst  1019.fixed.rst  1024.added.rst  1025.fixed.rst  1026.added.rst  1028.fixed.rst  1029.fixed.rst  1032.fixed.rst  1039.added.rst  1040.changed.rst  1041.fixed.rst  1042.added.rst  1044.added.rst  1046.changed.rst  1048.added.rst  1049.added.rst  1052.changed.rst  1054.fixed.rst  1059.removed.rst  1062.fixed.rst  1063.fixed.rst  1066.added.rst  1066.fixed.rst  1069.added.rst  1074.added.rst  1075.fixed.rst  1076.fixed.rst  1078.added.rst  1082.added.rst  (+838 more)
doc_src/: LICENSE.txt  Makefile  aboutus.rst  api.rst  cache.rst  caching.rst  cheat_sheet.rst  conf.py  configuration.rst  contents.rst  contributing.rst  credits.rst  data_persistence.rst  dataset.rst  design_space.rst  discipline.rst  discipline_interface_easier.rst  doe.rst  examples.rst  examples_and_tutorials.rst  extending.rst  faq.rst  gemseo_easier.rst  genindex.rst  glossary.rst  index.rst  list_algorithms_options.rst  list_of_examples.rst  list_of_tutorials.rst  machine_learning.rst  main_concepts.rst  make.bat  mdo.rst  mdo_scenario_easier.rst  ode.rst  optimization.rst  overview.rst  publications.rst  references.bib  roadmap.rst  (+9 more)
doc_src/_examples/: LICENSE.txt
doc_src/_ext/: add_toctree_functions.py  default_kwargs_values.py  reload_gemseo.py  sobieski_mdf_scenario.py  sphinxext.py
doc_src/_index/: features.inc  gemseo.inc  installation.inc  introduction.inc  powerofgemseo.inc  toctree.inc  tutorials.inc
doc_src/_static/: n2.html
doc_src/_templates/: module.rst
doc_src/algorithms/: index.rst  mlearning_algos.rst  uncertainty_algos.rst
doc_src/cache/: index.rst
doc_src/cheat_sheets/: availables.rst  cache.rst  coupling.rst  design_space.rst  discipline.rst  index.rst  new_discipline.rst  post.rst  scenario.rst  surrogate.rst
doc_src/data_persistence/: cache.rst  database.rst  dataset.rst  index.rst
doc_src/dataset/: dataset.rst  postprocessing.rst  problems.rst  uml.rst
doc_src/design_space/: design_space.py  design_space.rst  design_space_without_header.txt
doc_src/disciplines/: analytic_discipline.rst  autopydiscipline.rst  discipline_from_scratch.rst  discipline_interfacing_executable.rst  discipline_interfacing_executable_experimental.py  discipline_interfacing_executable_experimental.rst  discipline_matlab.rst  index.rst  jacobian_assembly.rst  namespaces.rst  ode_discipline.rst  run_discipline.bash
doc_src/examples/: index.rst
doc_src/includes/: big_toc_css.rst  bigger_toc_css.rst
doc_src/interface/: exe_discipline.rst  gemseo_study.rst  job_schedulers.rst  software_connection.rst  study_analysis.rst  xls_discipline.rst
doc_src/machine_learning/: index.rst
doc_src/mdo/: coupling.rst  mda.rst  mdo_formulations.rst  optimization.rst
doc_src/ode/: index.rst  introduction.rst  ode.rst  ode_discipline.rst  ode_problem.rst
doc_src/optimization/: concepts.rst
doc_src/postprocessing/: index.rst
doc_src/problems/: aerostructure_description.rst  aerostructure_problem_definition.inc  index.rst  propane_description.rst  sellar_description.rst  sellar_problem_definition.inc  sobieski_description.rst
doc_src/scalable_models/: index.rst  original_paper.rst
doc_src/scenario/: monitoring.rst  scenario.py  scenario.rst
doc_src/settings/: algorithm_settings.rst  formulation_settings.rst  mda_settings.rst  post_processing_settings.rst
docs/: aboutus.md  changelog.md  configuration.md  contributing.md  credits.md  doe.md  extending.md  faq.md  gallery_conf.py  gen_ref_nav.py  index.md  licenses.md.jinja  machine_learning.md  overview.md  plugins.md  publications.md  references.bib  roadmap.md  rss.md  surrogate.md
public/: versions.json
recipe/: meta.yaml
requirements/: check-types.in  check-types.txt  check.in  check.txt  dev.in  dev.txt  dist.in  dist.txt  doc-plugins.txt  doc.in  doc.txt  docs-environment.yml  gemseo-conda-python2.txt  gemseo-conda-python3.txt  gemseo.in  pylint.in  pylint.txt  split-local-data.md  style.in  style.txt  test-python2.txt  test-python3.10-min-deps-versions.txt  test-python3.10.txt  test-python3.11.txt  test-python3.12.txt  test-python3.13.txt  test-python3.7.txt  test-python3.8.txt  test-python3.9-min-deps-versions.txt  test-python3.9.txt  test-python3.txt  test.in  test.txt
tests/: conftest.py  database_from_database_custom.hdf5  database_from_database_default.hdf5  database_from_problem.hdf5  test_api.py  test_dataframe_disciplines.py  test_doc_examples.py  test_gemseo.py  test_required_names.py  test_settings.py
tools/: Dockerfile  Dockerfile.windows  check-git-is-not-dirty  check-plugins-after-release  copy_ref_file.py  create-full-package.sh  extract_req_in_from_setup_cfg.py  test-anaconda-env-file.xsh  test-anaconda-envs.xsh  test-anaconda-package.xsh
(+6644 files in other folders)
