[project]
name = "gemseo"
authors = [{ name = "GEMSEO developers", email = "contact@gemseo.org" }]
description = "Generic Engine for Multi-disciplinary Scenarios, Exploration and Optimization"
readme = "README.md"
license = "LGPL-3.0"
license-files = ["LICENSE.txt"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
requires-python = ">=3.10, <3.15"
dependencies = [
    "docstring-inheritance >=2.0.0,<=3.0.0",
    "fastjsonschema >=2.14.5,<=2.21.2",
    "genson >=1.2.2,<=1.3.0",
    "h5py >=3.6.0,<=3.16.0",
    "jinja2 >=3.0.0,<=3.1.6",
    "matplotlib >=3.6.0,<=3.10.9",
    "minisom >=2.3.5,<=2.3.6",
    "networkx >=2.5,<=3.6.1",
    "numpy >=1.23,<=2.4.4",
    "packaging >=15,<=26.2",
    "pandas >=2.1.0,<=2.3.3",
    "prettytable >=2.3.0,<=3.17.0",
    "pyxdsm >=2.2.1,<=2.3.2",
    "pydantic >=2.7,<=2.13.4",
    "pydantic-settings >=2.1.0,<=2.14.1",
    "requests >2,<3",
    "scipy >=1.12,<=1.17.1",
    "strenum >=0.4.9,<=0.4.15",
    "tqdm >=4.50,<=4.67.3",
    "typing-extensions >=4,<5",
    "xdsmjs >=1.0.0,<=2.0.0",
    "xxhash >=3.0.0,<=3.7.0",
    "syrupy>=5.1.0,<=5.1.0",
]

[project.optional-dependencies]
all = [
    # Graphviz requires the dot executable.
    "graphviz >=0.19,<=0.21",
    "nlopt >=2.7.0,<=2.10.0",
    # For pandas excel reader.
    "openpyxl >=3.0.10,<=3.1.5",
    "openturns >=1.20,<=1.27",
    "pillow >=9.5.0,<=12.2.0",
    "plotly >=5.7.0,<=6.7.0",
    "pyDOE3 >=1.0.1,<=1.6.2",
    "scikit-learn >=1.2,<=1.8.0",
    "spgl1 >=0.0.3,<= 1.0.0",
    "sympy >=1.5,<=1.14.0",
    "xlwings >=0.27.0,<=0.33.16 ; platform_system=='Windows'",
]

[dependency-groups]
dev = [
    { include-group = "check" },
    { include-group = "test" },
]
test = [
    "covdefaults",
    "pandera",
    # Lower bound is necessary for testing the lowest bounds of dependencies.
    "pytest >=8",
    "pytest-cov",
    "pytest-xdist",
    "pytest-sugar",
    "syrupy-matplotlib",
]
doc = [
    "black",
    "click",
    "griffe-fieldz",
    "griffe-inherited-docstrings",
    "markdown-exec[ansi]",
    "mike",
    "mkdocs <2",
    "mkdocs-bibtex",
    "mkdocs-gallery",
    "mkdocs-gen-files",
    "mkdocs-include-markdown-plugin",
    "mkdocs-literate-nav",
    "mkdocs-macros-plugin",
    "mkdocs-material",
    "mkdocs-section-index",
    "mkdocstrings[python]",
    "mkdocs-autorefs",
    "mkdocs-minify-plugin",
    # For supporting DataFrame in pydantic models in an example.
    "pandera",
]
check = [
    # "just",
    "prek",
    "ruff",
]
dist = [
    "check-wheel-contents",
]
typing = [
    "mypy[reports]",
    "pandas-stubs",
    "types-tqdm",
]

[project.urls]
Homepage = "https://gemseo.org"
Documentation = "https://gemseo.readthedocs.io"
Source = "https://gitlab.com/gemseo/dev/gemseo"
Issues = "https://gitlab.com/gemseo/dev/gemseo/-/issues"

[project.scripts]
gemseo-study = "gemseo.utils.study_analyses.study_analysis_cli:main"
gemseo-deserialize-run = "gemseo.utils.deserialize_and_run:main"

[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
