# setuptools settings
# See https://python-packaging-user-guide.readthedocs.io
# and https://setuptools.readthedocs.io for more details.
[metadata]
name = gemseo
author = GEMSEO developers
author_email = contact@gemseo.org
url = https://gitlab.com/gemseo
project_urls =
    Documentation = https://gemseo.readthedocs.io
    Source = https://gitlab.com/gemseo/dev/gemseo
    Tracker = https://gitlab.com/gemseo/dev/gemseo/-/issues
description = Generic Engine for Multi-disciplinary Scenarios, Exploration and Optimization
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GNU Lesser General Public License v3
license_files =
    LICENSE.txt
    CREDITS.rst
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.8, <3.11
install_requires =
    docstring-inheritance >=1.0.0,<=2.0.0
    fastjsonschema >=2.14.5,<=2.18.0
    genson ==1.2.2
    h5py >=3.0.0,<=3.9.0
    jinja2 >=3.0.0,<=3.1.2
    matplotlib >=3.3.0,<=3.8.0
    networkx >=2.2,<=3.1
    numpy >=1.21,<=1.26.0
    packaging <=23.1
    pandas >=1.1.0,<=2.1.1
    pyxdsm >=2.1.0,<=2.3.0
    pydantic >=1.10.8,<2
    requests
    scipy >=1.4,<=1.10.1
    strenum >=0.4.9,<=0.4.15
    tqdm >=4.41,<=4.66.1
    typing-extensions >=4,<5
    xdsmjs >=1.0.0,<=2.0.0
    xxhash >=3.0.0,<=3.3.0

[options.packages.find]
where = src

[options.extras_require]
all =
    # Graphviz requires the dot executable.
    graphviz >=0.16,<=0.20.1
    nlopt >=2.7.0,<=2.7.1
    # For pandas excel reader.
    openpyxl <=3.1.2
    openturns >=1.16,<=1.21
    pydoe2 >=1.0.2,<=1.3.0
    scikit-learn >=0.18,<=1.3.1
    sympy >=1.5,<=1.12
    xlwings >=0.27.0,<=0.27.15 ; platform_system=='Windows'
    pillow >=9.5.0,<=10.0.0
test =
    covdefaults
    pytest
    pytest-cov
    pytest-xdist
doc =
    autodocsumm
    pillow
    pyenchant
    sphinx <7
    sphinx_gallery
    sphinxcontrib.bibtex <2
    sphinxcontrib.plantuml
    sphinxcontrib.spelling
    sphinxcontrib.apidoc

[options.entry_points]
console_scripts =
    gemseo-study = gemseo.utils.study_analyses.study_analysis_cli:main
    gemseo-deserialize-run = gemseo.utils.deserialize_and_run:main
